package fr.ensimag.deca.tree;

/**
 * Visibility of a field.
 *
 * @author gl10
 * @date 01/01/2024
 */

public enum Visibility {
    PUBLIC,
    PROTECTED
}
